Fix component alignment issues

--- a/src/github.com/pakflame/app/src/index.css
+++ b/src/github.com/pakflame/app/src/index.css
@@ -1,4 +1,4 @@
-@import '~primereact/resources/themes/mdc-dark-indigo/theme.css';
+@import '~primereact/resources/themes/saga-blue/theme.css';
 @import '~primereact/resources/primereact.css';
 @import '~primeicons/primeicons.css';
 @import 'primeflex.css';
@@ -10,6 +10,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  color: inherit;
 }
 
 code {
